# KsefPay

./: .dockerignore  .env.example  .gitignore  Caddyfile  Caddyfile.production  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN-security-hardening.md  PLAN.md  README.md  docker-compose.nas.yml  docker-compose.prod.yml  docker-compose.yml  fly.toml
.github/workflows/: deploy.yml
docs/: invoice-data-flow.md  ksef-api-reference.md  test-cert-howto.md
ksef-core/: Cargo.toml  build.rs
ksef-core/examples/: backfill_nip_account.rs  gen_nip.rs  generate_fa3_types.rs  register_subject.rs  reset_password.rs
ksef-core/migrations/: 001_initial_schema.sql  002_fetched_status_and_raw_xml.sql  003_invoice_type_and_corrections.sql  004_nullable_payment_fields.sql  005_multi_tenant_auth.sql  006_company_cache_and_invoice_sequences.sql  007_security_hardening.sql  008_nip_account_tokens.sql  009_invoice_composite_ksef_key.sql  010_nip_credential_managers.sql  011_workspaces.sql  012_drop_user_nip_access.sql  013_application_access_invites.sql  014_invite_integrity.sql  015_trusted_application_access.sql
ksef-core/migrations/sqlite/: 001_initial_schema.sql  002_fetched_status_and_raw_xml.sql  003_invoice_type_and_corrections.sql  004_nullable_payment_fields.sql  005_multi_tenant_auth.sql  006_company_cache_and_invoice_sequences.sql  007_security_hardening.sql  008_nip_account_tokens.sql  009_invoice_composite_ksef_key.sql  010_nip_credential_managers.sql  011_workspaces.sql  013_application_access_invites.sql  014_invite_integrity.sql  015_trusted_application_access.sql
ksef-core/schemas/fa3/: README.md
ksef-core/schemas/fa3/2025-06-25-13775/: SHA256SUMS.txt  UPSTREAM_SHA256SUMS.txt
ksef-core/src/: error.rs  lib.rs
ksef-core/src/domain/: account_scope.rs  application_access.rs  audit.rs  auth.rs  batch.rs  certificate.rs  certificate_mgmt.rs  company.rs  crypto.rs  environment.rs  export.rs  identifiers.rs  invoice.rs  job.rs  mod.rs  nip.rs  nip_account.rs  offline.rs  peppol.rs  permission.rs  qr.rs  rate_limit.rs  session.rs  token_mgmt.rs  user.rs  workspace.rs  xml.rs
ksef-core/src/infra/: mod.rs
ksef-core/src/infra/batch/: mod.rs  zip_builder.rs
ksef-core/src/infra/crypto/: certificate_store.rs  encryptor.rs  mod.rs  signer_factory.rs  xades.rs
ksef-core/src/infra/fa3/: mod.rs  model_converter.rs  parse.rs  serialize.rs  versioned_adapter.rs  xsd_validator.rs
ksef-core/src/infra/http/: mod.rs  rate_limiter.rs  retry.rs
ksef-core/src/infra/ksef/: api_client.rs  auth_client.rs  auth_sessions_client.rs  batch_client.rs  certificates_client.rs  export_client.rs  http_base.rs  mod.rs  peppol_client.rs  permissions_client.rs  rate_limits_client.rs  session_client.rs  testdata.rs  tokens_client.rs
ksef-core/src/infra/pg/: invoice_repo.rs  job_queue.rs  mod.rs  session_repo.rs
ksef-core/src/infra/pg/queries/: application_access.rs  audit.rs  company_cache.rs  invoice.rs  invoice_sequence.rs  job.rs  local_token.rs  mod.rs  nip_account.rs  session.rs  user.rs  workspace.rs
ksef-core/src/infra/qr/: generator.rs
ksef-core/src/infra/sqlite/: mod.rs
ksef-core/src/infra/sqlite/queries/: application_access.rs  audit.rs  company_cache.rs  datetime.rs  invoice.rs  invoice_sequence.rs  job.rs  local_token.rs  mod.rs  nip_account.rs  session.rs  user.rs  workspace.rs
ksef-core/src/infra/validation/: mod.rs
ksef-core/src/infra/whitelist/: client.rs  mod.rs
ksef-core/src/ports/: application_access_repository.rs  audit_log.rs  batch_archive_builder.rs  company_cache.rs  company_lookup.rs  encryption.rs  invoice_decryptor.rs  invoice_repository.rs  invoice_sequence.rs  invoice_xml.rs  invoice_xml_validator.rs  job_queue.rs  ksef_auth.rs  ksef_auth_sessions.rs  ksef_batch.rs  ksef_certificates.rs  ksef_client.rs  ksef_export.rs  ksef_peppol.rs  ksef_permissions.rs  ksef_rate_limits.rs  ksef_tokens.rs  local_token_repository.rs  mod.rs  nip_account_repository.rs  qr_renderer.rs  session_repository.rs  signer_factory.rs  transaction.rs  user_repository.rs  workspace_repository.rs
ksef-core/src/services/: audit_service.rs  batch_service.rs  company_lookup_service.rs  export_service.rs  fetch_service.rs  invoice_service.rs  mod.rs  offline_service.rs  permission_service.rs  qr_service.rs  session_service.rs  token_mgmt_service.rs
ksef-core/src/test_support/: fixtures.rs  mock_invoice_repo.rs  mock_job_queue.rs  mock_ksef.rs  mock_session_repo.rs  mod.rs
ksef-core/src/workers/: job_worker.rs
ksef-core/tests/: architecture_imports.rs  fa3_integration.rs  fa3_xsd_validation.rs  ksef_e2e.rs  pg_integration.rs  sqlite_integration.rs
ksef-server/: Cargo.toml
ksef-server/assets/base/: index.css
ksef-server/src/: application_access_invites.rs  audit_log.rs  auth_rate_limit.rs  config.rs  csrf.rs  db_backend.rs  email.rs  extractors.rs  invite_tokens.rs  main.rs  request_meta.rs  state.rs  workspace_invites.rs
ksef-server/src/routes/: accounts.rs  api.rs  application_access.rs  auth.rs  dashboard.rs  export.rs  fetch.rs  invoices.rs  mod.rs  permissions.rs  profile.rs  sessions.rs  tokens.rs  workspaces.rs
ksef-server/templates/components/: navbar.html
ksef-server/templates/layouts/: app.html
ksef-server/templates/macros/: alerts.html  forms.html
ksef-server/templates/pages/: account_add.html  account_certificate.html  accounts.html  application_access.html  dashboard.html  export.html  fetch.html  fetch_history.html  fetch_results.html  invoice_detail.html  invoice_new.html  invoices.html  login.html  permissions.html  profile.html  register.html  sessions.html  tokens.html  workspace_access.html  workspace_new.html
scripts/: run_step2_with_generated_cert.sh
