[workspace]
members = ["ksef-core", "ksef-server"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# web framework
axum = { version = "0.8", features = ["macros"] }

# templates (axum IntoResponse is auto-detected since askama 0.13)
askama = "0.15"

# database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json"] }

# http client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# xml
quick-xml = { version = "0.37", features = ["serialize"] }

# crypto
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rsa = { version = "0.9", features = ["sha2"] }
openssl = "0.10"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# batch + qr
zip = "2"
qrcode = "0.14"
image = "0.25"

# error handling
thiserror = "2"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# auth
argon2 = "0.5"

# config
anyhow = "1"

# testing
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these pedantic lints — too noisy for MVP, low signal
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
