[package]
name = "ksef-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "KSeF e-invoice web dashboard — Axum + Askama standalone server"

[dependencies]
ksef-core = { path = "../ksef-core" }
tokio.workspace = true
axum.workspace = true
askama.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true

[lints]
workspace = true
