[package]
name = "ksef-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "KSeF e-invoice web dashboard — Axum + Askama standalone server"

[dependencies]
ksef-core = { path = "../ksef-core" }
tokio.workspace = true
axum = { workspace = true, features = ["multipart"] }
askama.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
argon2.workspace = true
openssl.workspace = true
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "pool", "hostname", "native-tls"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres", "sqlite"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true

[lints]
workspace = true
